# status-value-lite

./: .tgitconfig  .travis.yml  CHANGES.txt  CMakeLists.txt  LICENSE  README.md  README_cpp98.md  appveyor.yml  conanfile.py
.github/workflows/: ci.yml
example/: 01-basic.cpp  01-basic_cpp98.cpp  02-required.cpp  03-error_condition.cpp  04-maybe.cpp  CMakeLists.txt
example/nonstd/: status_value.tweak.hpp
include/nonstd/: status_value.hpp  status_value_cpp98.hpp
project/CodeBlocks/: status_value.cbp  status_value.workspace
script/: create-cov-rpt.py  create-vcpkg.py  update-version.py  upload-conan.py
test/: CMakeLists.txt  status-value.t.cpp  status-value_cpp98.t.cpp  status_value.t.cpp  status_value_cpp98.t.cpp  t-all.bat  t-cpp98.bat  t.bat  tc-cl.bat  tc.bat  tg.bat
test/nonstd/: status_value.tweak.hpp
